cmake_minimum_required(VERSION 3.5)
project(httpserver)

cmake_policy(SET CMP0015 NEW)
set(CMAKE_CXX_STANDARD 11)
set(SRC src/httpserver.cpp src/rnx.cpp src/ntripcaster.cpp src/main.cpp) 
include_directories(include include/libevent)
link_directories(lib)
add_definitions(-DENAGLO -DENAGAL -DENACMP -DNEXOBS=3)
add_executable(ntripcaster ${SRC})
target_link_libraries(ntripcaster event event_core event_extra rtkcmn pthread)